--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,7 +1,7 @@
 .page {
   width: 100%;
   max-width: 860px;
-  padding: 64px 40px 80px;
+  padding: 0 40px 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
