--- a/src/pages/Rankings.module.css
+++ b/src/pages/Rankings.module.css
@@ -1,7 +1,7 @@
 .page {
   width: 100%;
   max-width: 920px;
-  padding: 48px 40px 80px;
+  padding: 0 40px 40px;
   align-self: flex-start;
 }
 
